--- a/mytomrole/templates/mytopcatuser.j2
+++ b/mytomrole/templates/mytopcatuser.j2
@@ -1,3 +1,4 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   Licensed to the Apache Software Foundation (ASF) under one or more
@@ -16,6 +17,9 @@
   limitations under the License.
 -->
 <role rolename="manager-gui" />
+<user username="manager" password="manager_password" roles="manager-gui" />
+
+<role rolename="admin-gui" />
 <user username="admin" password="admin" roles="manager-gui,admin-gui" />
 <tomcat-users xmlns="http://tomcat.apache.org/xml"
               xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -38,7 +42,7 @@
   will also need to set the passwords to something appropriate.
 -->
 <!--
-  <user username="admin" password="<must-be-changed>" roles="manager-gui"/>
+ <user username="admin" password="<must-be-changed>" roles="manager-gui"/>
   <user username="robot" password="<must-be-changed>" roles="manager-script"/>
 -->
 <!--
